# factorio-scanner

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  artillery.txt  nextest.ci.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
blueprint/: Cargo.toml  README.md
blueprint/examples/: extract-tests.rs
blueprint/src/: blueprint.rs  book.rs  lib.rs  planner.rs
blueprint/src/blueprint/: entity.rs  logistics.rs  parameters.rs  trains.rs
blueprint/src/blueprint/entity/: control_behavior.rs  inventory.rs
blueprint/src/blueprint/entity/control_behavior/: combinator.rs
blueprint/src/planner/: decon.rs  upgrade.rs
blueprint/tests/: bilka.txt  comparators_operators_and_invalids.txt  omni_crafter_GWP.txt  train_schedule_temporary_record.txt
blueprint/tests/2.0/: artillery.json  artillery.txt  belts.json  combinators.json  combinators.txt  constant_logistic_group.json  constant_logistic_group.txt  elevated_rails.json  elevated_rails.txt  flipped_fluidboxes.json  flipped_fluidboxes.txt  gate_edgecase.json  heat.json  inserters.json  inserters.txt  long_train.json  long_train.txt  parametrics.json  parametrics.txt  platform_hub.json  platform_hub.txt  quality_chemplants.json  quality_chemplants.txt  rail_test_circle.json  rail_test_circle.txt  test_book.txt  train_schedule.json  train_schedule.txt  walls.json  wires.json
blueprint/tests/2.0/fluidboxes/: pumps.json  regular_pipes.json  storagetanks.json  valves.json
blueprint/tests/2.0/large_connectables/: cargo_bays.json  cargo_landing_bays.json  fusion.json
blueprint/tests/2.0/rail_things/: artillery_wagon_direction.json  elevated_rails.json  long_train.json  rail_signals.json  rail_test_circle.json  train_schedule.json
factorio_api/: Cargo.toml  README.md
factorio_api/src/: lib.rs
factorio_datastage/: Cargo.toml  README.md  defines.lua  history.lua  serpent.lua
factorio_datastage/examples/: mod-tester.rs  vm-test.rs
factorio_datastage/src/: helpers.rs  lib.rs  require.rs
locale/: Cargo.toml
locale/src/: lib.rs
lua_api_doc/: Cargo.toml  README.md
lua_api_doc/src/: format.rs  main.rs
lua_api_doc/src/format/: prototype.rs
mod_settings/: Cargo.toml  README.md
mod_settings/src/: lib.rs
mod_util/: Cargo.toml  README.md
mod_util/src/: any_basic.rs  lib.rs  mod_info.rs  mod_list.rs  mod_loader.rs  mod_settings.rs  property_tree.rs
mod_util/src/mod_info/: feature_flags.rs
mod_util/test_mods/dummy1/: data-final-fixes.lua  data.lua  info.json
mod_util/test_mods/dummy1/locale/de/: mod.cfg
mod_util/test_mods/dummy1/locale/en/: mod.cfg
pretty_logging/: Cargo.toml
pretty_logging/src/: lib.rs
prototypes/: Cargo.toml  README.md
prototypes/src/: entity.rs  entity_graphics.rs  fluid.rs  item.rs  lib.rs  quality.rs  recipe.rs  rendering.rs  signal.rs  space_location.rs  tile.rs  utility_sprites.rs
prototypes/src/entity/: abstractions.rs  accumulator.rs  agricultural_tower.rs  artillery_turret.rs  asteroid_collector.rs  beacon.rs  boiler.rs  burner_generator.rs  cargo_bay.rs  cargo_landing_pad.rs  combinators.rs  containers.rs  crafting_machines.rs  display_panel.rs  displaypanel.rs  electric_energy_interface.rs  electric_pole.rs  fluid_box_entity.rs  flying_robots.rs  fusion_generator.rs  fusion_reactor.rs  gate.rs  generator.rs  heat_interface.rs  heat_pipe.rs  inserter.rs  lab.rs  lamp.rs  landmine.rs  lightning_attractor.rs  market.rs  mining_drill.rs  offshore_pump.rs  pipe.rs  power_switch.rs  programmable_speaker.rs  proxy.rs  pump.rs  radar.rs  rail_signals.rs  (+15 more)
prototypes/src/entity/abstractions/: energy_entity.rs  fluid_box_entity.rs  heat_buffer_entity.rs  wire_entity.rs
prototypes/src/item/: TODO  ammo.rs  capsule.rs  gun.rs  item_with_entity_data.rs  item_with_label.rs  module.rs  rail_planner.rs  space_platform_starter_pack.rs  spidertron_remote.rs  tool.rs
prototypes/src/item/item_with_label/: selection_tool.rs
scanner/: Cargo.toml  README.md  build.rs
scanner/examples/: render_test_bps.rs
scanner/schemas/: api.capnp
scanner/src/: bp_helper.rs  lib.rs  main.rs  preset.rs
serde_helper/: Cargo.toml
serde_helper/src/: float.rs  integer.rs  lib.rs
src/: blueprint.rs  main.rs  mod_settings.rs
src/data_raw/: mod.rs
src/data_raw/prototypes/: entity.rs  mod.rs
src/data_raw/prototypes/entity/: accumulator.rs  artillery_turret.rs  beacon.rs  boiler.rs  burner_generator.rs  combinators.rs  containers.rs  crafting_machines.rs  electric_energy_interface.rs  electric_pole.rs  flying_robots.rs  gate.rs  generator.rs  heat_interface.rs  heat_pipe.rs  inserter.rs  lab.rs  lamp.rs  landmine.rs  mining_drill.rs  offshore_pump.rs  pipe.rs  power_switch.rs  programmable_speaker.rs  pump.rs  radar.rs  rail_signals.rs  rails.rs  reactor.rs  roboport.rs  simple_entities.rs  solar_panel.rs  storage_tank.rs  train_stop.rs  transport_belts.rs  turrets.rs  vehicles.rs  wall.rs
src/data_raw/types/: energy.rs  graphics.rs  icon.rs  mod.rs
types/: Cargo.toml  README.md
types/src/: direction.rs  empty_array_fix.rs  energy.rs  fluid_box.rs  g2.rs  graphics.rs  icon.rs  ids.rs  item.rs  lib.rs  math_expression.rs  module.rs  wire.rs
types/src/g2/: animation.rs  beacon.rs  rotated.rs  sheet.rs  sprite.rs  tile.rs  transport_belt.rs  variations.rs  working_visualisation.rs
types/src/graphics/: animation.rs  beacon.rs  n_way.rs  rotated.rs  sheet.rs  sprite.rs  tile.rs  transport_belt.rs  util.rs  variations.rs  working_visualisation.rs
