[workspace]
resolver = "2"
members = [
    "blueprint",
    "factorio_api",
    "locale",
    "lua_api_doc",
    "mod_util",
    "pretty_logging",
    "prototypes",
    "serde_helper",
    "scanner",
    "types",
]

[workspace.package]
authors = ["fgardt <me@fgardt.dev>"]
edition = "2021"

[profile.release]
strip = true
lto = "thin"

[workspace.dependencies]
blueprint = { path = "blueprint" }
clap = { version = "4.5", features = ["derive"] }
factorio_api = { path = "factorio_api" }
flate2 = "1.0"
image = { version = "0.25", features = ["png"], default-features = false }
konst = "0.3"
locale = { path = "locale" }
mod_util = { path = "mod_util" }
pretty_logging = { path = "pretty_logging" }
prototypes = { path = "prototypes" }
serde = { version = "1.0", features = ["derive"] }
serde_helper = { path = "serde_helper" }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "3.7"
thiserror = "1.0"
tracing = { version = "0.1", features = ["attributes", "log"] }
tokio = "1.36"
types = { path = "types" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"

missing_panics_doc = "allow"
missing_errors_doc = "allow"

module_name_repetitions = "allow"

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
