[workspace]
resolver = "2"
members = [
    "blueprint",
    "factorio_api",
    "locale",
    "mod_util",
    "prototypes",
    "serde_helper",
    "scanner",
    "types",
]

[workspace.package]
authors = ["fgardt <me@fgardt.dev>"]
edition = "2021"

[profile.release]
strip = true
lto = "thin"

[workspace.dependencies]
blueprint = { path = "blueprint" }
clap = { version = "4.5", features = ["derive"] }
factorio_api = { path = "factorio_api" }
flate2 = "1.0"
image = { version = "0.25", features = ["png"], default-features = false }
imageproc = "0.25"
konst = "0.3"
locale = { path = "locale" }
mod_util = { path = "mod_util" }
paste = "1.0"
prototypes = { path = "prototypes" }
serde = { version = "1.0", features = ["derive"] }
serde_helper = { path = "serde_helper" }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "3.11"
thiserror = "2"
tracing = { version = "0.1", features = ["attributes", "log"] }
tokio = "1.41"
types = { path = "types" }
regex = "1.11"

[patch.crates-io]
serde_with = { git = "https://github.com/fgardt/serde_with.git", branch = "feat/with_suffix" }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

missing_panics_doc = "allow"
missing_errors_doc = "allow"

module_name_repetitions = "allow"

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

collection_is_never_read = "allow"
