[workspace]
resolver = "2"
members = [
    "blueprint",
    "factorio_api",
    "factorio_datastage",
    "locale",
    "mod_util",
    "prototypes",
    "serde_helper",
    "scanner",
    "types",
]

[workspace.package]
authors = ["fgardt <me@fgardt.dev>"]
edition = "2024"

[profile.release]
strip = true
lto = "thin"

[workspace.dependencies]
base64 = "0.22"
dotenv = "0.15"
pretty_env_logger = "0.5"
scanner = { path = "scanner" }
blueprint = { path = "blueprint" }
clap = { version = "4.5", features = ["derive"] }
factorio_api = { path = "factorio_api" }
flate2 = "1.1"
image = { version = "0.25", features = ["png"], default-features = false }
imageproc = "0.25"
konst = "0.4"
locale = { path = "locale" }
mod_util = { path = "mod_util" }
paste = "1.0"
prototypes = { path = "prototypes" }
serde = { version = "1.0", features = ["derive"] }
serde_helper = { path = "serde_helper" }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "3.12"
thiserror = "2"
tracing = { version = "0.1", features = ["attributes", "log"] }
tokio = "1.45"
types = { path = "types" }
regex = "1.11"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

missing_panics_doc = "allow"
missing_errors_doc = "allow"

module_name_repetitions = "allow"

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

collection_is_never_read = "allow"
