[package]
name = "blueprint"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
base64 = "0.21.4"
flate2.workspace = true
mod_util.workspace = true
serde.workspace = true
serde_helper.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
types.workspace = true
