[package]
name = "blueprint"
version = "0.7.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[[example]]
name = "extract-tests"
path = "examples/extract-tests.rs"

[dependencies]
base64.workspace = true
flate2.workspace = true
mod_util.workspace = true
serde.workspace = true
serde_helper.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tracing.workspace = true
types.workspace = true
