[package]
name = "factorio_api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
blocking = ["reqwest/blocking"]

[dependencies]
mod_util.workspace = true
reqwest = { version = "0.11.22", features = [
    "rustls-tls",
    "multipart",
], default-features = false }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio-test = "0.4.3"
