[package]
name = "factorio_api"
version = "0.2.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
mod_util.workspace = true
reqwest = { version = "0.11", features = [
    "rustls-tls",
    "multipart",
], default-features = false }
reqwest-middleware = "0.2"
reqwest-retry = "0.4"
reqwest-tracing = "0.4"
serde.workspace = true
serde_json.workspace = true
task-local-extensions = "0.1"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test = "0.4.3"
