[package]
name = "lua_api_doc"
version = "0.4.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
diff-struct = "0.5.3"
reqwest = { version = "0.11.22", features = [
    "rustls-tls",
    "blocking",
], default-features = false }
serde.workspace = true
serde_json.workspace = true
