[package]
name = "lua_api_doc"
version = "0.4.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
diff-struct = "0.5"
reqwest = { version = "0.11", features = [
    "rustls-tls",
    "blocking",
], default-features = false }
serde.workspace = true
serde_json.workspace = true
