[package]
name = "mod_settings"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blueprint.workspace = true
serde.workspace = true
serde_helper.workspace = true
serde_with.workspace = true
