[package]
name = "mod_util"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[features]
bp_meta_info = ["dep:blueprint"]
default = ["bp_meta_info"]

[dependencies]
anyhow = "1.0.75"
blueprint = { workspace = true, optional = true }
byteorder = "1.5.0"
regex = "1.10.2"
serde.workspace = true
serde_helper.workspace = true
serde_json.workspace = true
serde_with.workspace = true
