[package]
name = "mod_util"
version = "0.2.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
bp_meta_info = []

[dependencies]
byteorder = "1.5"
petgraph = "0.6"
regex = "1.10"
serde.workspace = true
serde_helper.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tracing.workspace = true
zip = "0.6"
