[package]
name = "prototypes"
version = "1.1.101"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
image.workspace = true
imageproc = "0.23.0"
konst.workspace = true
mod_util.workspace = true
serde.workspace = true
serde_helper.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
thiserror.workspace = true
types.workspace = true
