[package]
name = "prototypes"
version = "2.2.2-1.1.107"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
image.workspace = true
imageproc = "0.25"
paste.workspace = true
konst.workspace = true
mod_util.workspace = true
serde.workspace = true
serde_helper.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
signed-distance-field = { version = "0.6", features = ["image"] }
thiserror.workspace = true
tracing.workspace = true
types.workspace = true
