[package]
name = "prototypes"
version = "3.1.0-2.1.11"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["graphics"]
graphics = [
    "types/graphics",
    "dep:image",
    "dep:imageproc",
    "dep:signed-distance-field",
]

[dependencies]
konst.workspace = true
paste.workspace = true
tracing.workspace = true
thiserror.workspace = true
mod_util.workspace = true
serde.workspace = true
serde_helper.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
types.workspace = true
image = { workspace = true, optional = true }
imageproc = { workspace = true, optional = true }
signed-distance-field = { version = "0.6", optional = true, features = [
    "image",
] }
