[package]
name = "scanner"
version = "0.5.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
blueprint.workspace = true
clap.workspace = true
error-stack = "0.4"
factorio_api.workspace = true
flate2.workspace = true
image.workspace = true
locale.workspace = true
mod_util = { workspace = true, features = ["bp_meta_info"] }
pretty_env_logger = "0.5"
prototypes.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
types.workspace = true
dotenv = "0.15"
rustc-hash = "1.1"
strum = { version = "0.26", features = ["derive"] }
tracing.workspace = true
tokio = { workspace = true, features = ["rt"] }

[build-dependencies]
capnpc = { version = "0.19.0" }
