[package]
name = "scanner"
version = "0.5.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[[example]]
name = "render_test_bps"
path = "examples/render_test_bps.rs"

[dependencies]
blueprint.workspace = true
clap.workspace = true
error-stack = "0.4"
factorio_api.workspace = true
flate2.workspace = true
image.workspace = true
imageproc.workspace = true
locale.workspace = true
mod_util = { workspace = true, features = ["bp_meta_info"] }
pretty_env_logger.workspace = true
prototypes.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
types.workspace = true
dotenv.workspace = true
rustc-hash = "2.1"
strum = { version = "0.27", features = ["derive"] }
tracing.workspace = true
tokio = { workspace = true, features = ["rt"] }
