[package]
name = "types"
version = "2.2.1-1.1.107"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
image.workspace = true
konst.workspace = true
mod_util.workspace = true
paste.workspace = true
regex = "1.10"
serde.workspace = true
serde_helper.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
tracing.workspace = true
