[package]
name = "types"
version = "3.0.1-2.0.60"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
image.workspace = true
konst.workspace = true
mod_util.workspace = true
paste.workspace = true
regex.workspace = true
serde.workspace = true
serde_helper.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
tracing.workspace = true
