[package]
name = "types"
version = "3.0.1-2.0.76"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
graphics = ["dep:image"]

[dependencies]
konst.workspace = true
paste.workspace = true
tracing.workspace = true
thiserror.workspace = true
mod_util.workspace = true
regex.workspace = true
serde.workspace = true
serde_helper.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
image = { workspace = true, optional = true }
